[SDPA-761] Updated tide_api version.

--- a/composer.json
+++ b/composer.json
@@ -4,12 +4,12 @@
     "type": "drupal-profile",
     "license": "GPL-2.0+",
     "require": {
-        "dpc-sdp/tide_api": "dev-master",
+        "dpc-sdp/tide_api": "dev-feature/SDPA-761-index-grants",
         "dpc-sdp/tide_core": "dev-master",
         "dpc-sdp/tide_event": "dev-master",
         "dpc-sdp/tide_landing_page": "dev-master",
         "dpc-sdp/tide_media": "dev-master",
-        "dpc-sdp/tide_news": "dev-master",
+        "dpc-sdp/tide_news": "dev-feature/SDPA-761-index-grants",
         "dpc-sdp/tide_page": "dev-master",
         "dpc-sdp/tide_search": "dev-master",
         "dpc-sdp/tide_site": "dev-master",
