--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
     "type": "drupal-profile",
     "license": "GPL-2.0+",
     "require": {
-        "dpc-sdp/tide_api": "dev-master",
+        "dpc-sdp/tide_api": "dev-feature/SDPA-1628_grants-import",
         "dpc-sdp/tide_core": "dev-feature/SDPA-1664-enable-clamav",
         "dpc-sdp/tide_event": "dev-master",
         "dpc-sdp/tide_landing_page": "dev-master",
