--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
         "dpc-sdp/tide_site": "dev-master",
         "dpc-sdp/tide_test": "dev-master",
         "dpc-sdp/tide_monsido": "dev-master",
-        "dpc-sdp/tide_webform": "dev-master",
+        "dpc-sdp/tide_webform": "dev-feature/SDPA-1564_password-reset-restrictions",
         "drupal/core": "^8.6.0"
     },
     "repositories": {
